# ab1024-ega

./: Cargo.toml  README.md  scratch
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: inkplate_basic.rs  inkplate_graphics.rs  inkplate_image.rs  inkplate_no_graphics.rs  inkplate_pride.rs  inkplate_raw_color.rs
src/: color.rs  dither.rs  epd.rs  error.rs  graphics.rs  lib.rs  main.rs  registers.rs  test.rs
