[package]
name = "inko"
version = "0.1.0"
authors = ["Tommy G <7865781+tommy-gilligan@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.17.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
