[package]
name = "ab1024-ega"
version = "0.1.0"
authors = ["Tommy G <7865781+tommy-gilligan@users.noreply.github.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal = "1.0.0-rc.2"
embedded-hal-bus = "0.1.0-rc.2"

[dev-dependencies]
tinybmp = "0.5.0"
heapless = "0.8.0"
embedded-graphics = "0.8.1"
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
hal = { package = "esp32-hal", version = "0.17.0", features = ["eh1"] }

[features]
default = ["dep:embedded-graphics-core"]
